<resources>
    <string name="app_name">learning</string>
    <string name="happy_learning">Happy Learning</string>
    <string name="learning">Learning</string>
    <string name="examination">Examination</string>
    <string name="repository">Repository</string>
    <string name="happy_learning">Happy Learning</string>
    <string name="enter_alphabet">Enter Alphabet</string>
    <string name="happy_learning">Happy Learning</string>
    <string name="search_image">Search Image</string>
</resources>